@@ -1,3 +1,11 @@
+2014-08-14  Thomas Preud'homme  <thomas.preudhomme@arm.com>
+
+	Backport from mainline
+	2014-08-12  Thomas Preud'homme  <thomas.preudhomme@arm.com>
+
+	PR middle-end/62103
+	* gcc.c-torture/execute/bitfld-6.c: New test.
+
 2014-08-12  Felix Yang  <fei.yang0953@gmail.com>
 
 	PR tree-optimization/62073
